mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      securityContext:
        runAsUser: 27
        runAsGroup: 27
        fsGroup: 27
      #initContainers:
      #  - name: fix-permissions
      #    image: quay.io/fedora/mysql-80
      #    command: ["sh", "-c", "chown -R 27:27 /var/lib/mysql"]
      #    volumeMounts:
      #    - name: mysql-persistent-storage
      #      mountPath: /var/lib/mysql
      containers:
      - image: quay.io/fedora/mysql-80
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
